# kanjiextract

./: .gitignore  README.md  pyproject.toml
kanjiextract/: __main__.py  utils.py
